python/examples/functions/default_first.out
  File "default_first.py", line 2
    def add(x=2, y):
            ^
SyntaxError: non-default argument follows default argument
